[package]
name = "mbblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["process", "rt-multi-thread", "macros", "io-util"] }
clap = { version = "4.4.10", features = ["derive"] }
